# reprotrail

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: api.rst  cli.md  concepts.md  conf.py  configuration.md  epochs.md  index.md  introduction.md  pixi.md  products.md  provenance.md  releasing.md  reproduce.md  runner.md  snakemake.md
docs/migration/: c4v-jan.md  c4v-utils.md  index.md  snipgit.md
scripts/: check_dist.py  check_privacy.py  check_release.py
src/reprotrail/: __init__.py  _json.py  _paths.py  cli.py  epochs.py  pixi.py  product_metadata.py  products.py  provenance.py  reproduce.py  runner.py  settings.py
src/reprotrail/templates/: __init__.py  product_README.md.template
tests/: test_cli.py  test_pixi_epochs.py  test_pixi_git_freshness.py  test_products.py  test_provenance.py  test_release.py  test_reproduce.py  test_runner.py  test_settings.py
